force-app/main/default/objects/Form__c/fields/Category_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Loss__c</fullName>
    <label>Category of Loss</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>