force-app/main/default/objects/Form__c/fields/Cause_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Loss__c</fullName>
    <label>Cause of Loss</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Slab leak</fullName>
            </value>
            <value>
                <fullName>Roof leak</fullName>
            </value>
            <value>
                <fullName>Toilet</fullName>
            </value>
            <value>
                <fullName>Sewer back-up</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>