force-app/main/default/objects/Form__c/fields/Cause_of_Loss_Comments_If_Other__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Loss_Comments_If_Other__c</fullName>
    <label>Cause of Loss Comments, If Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>