force-app/main/default/objects/Form__c/fields/E_Signature_URL__c.field-meta.xml
<CustomField>
    <fullName>E_Signature_URL__c</fullName>
    <label>E-Signature URL</label>
    <type>Url</type>
</CustomField>