force-app/main/default/objects/Form__c/fields/Estimate_Duration__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Duration__c</fullName>
    <inlineHelpText>No of Days</inlineHelpText>
    <label>Estimate Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>