force-app/main/default/objects/Form__c/fields/Exterior_RH__c.field-meta.xml
<CustomField>
    <fullName>Exterior_RH__c</fullName>
    <label>Exterior RH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>