force-app/main/default/objects/Form__c/fields/Extraction_Required__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extraction Required</label>
    <type>Checkbox</type>
</CustomField>