force-app/main/default/objects/Form__c/fields/Form_No__c.field-meta.xml
<CustomField>
    <fullName>Form_No__c</fullName>
    <label>Form No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>