force-app/main/default/objects/Form__c/fields/Forms_Count__c.field-meta.xml
<CustomField>
    <fullName>Forms_Count__c</fullName>
    <label>Forms Count</label>
    <type>AutoNumber</type>
</CustomField>