force-app/main/default/objects/Form__c/fields/Hour_Response__c.field-meta.xml
<CustomField>
    <fullName>Hour_Response__c</fullName>
    <label>12-Hour Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>