force-app/main/default/objects/Form__c/fields/Interior_RH__c.field-meta.xml
<CustomField>
    <fullName>Interior_RH__c</fullName>
    <label>Interior RH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>