force-app/main/default/objects/Form__c/fields/Interior_Temp__c.field-meta.xml
<CustomField>
    <fullName>Interior_Temp__c</fullName>
    <label>Interior Temp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>