force-app/main/default/objects/Form__c/fields/Is_It_Salvageable__c.field-meta.xml
<CustomField>
    <fullName>Is_It_Salvageable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is It Salvageable</label>
    <type>Checkbox</type>
</CustomField>