force-app/main/default/objects/Form__c/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Number</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>FormAssembly</relationshipName>
    <type>Lookup</type>
</CustomField>