force-app/main/default/objects/Form__c/fields/Job_Started__c.field-meta.xml
<CustomField>
    <fullName>Job_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Started</label>
    <type>Checkbox</type>
</CustomField>