force-app/main/default/objects/Form__c/fields/Job_Started_Comments__c.field-meta.xml
<CustomField>
    <fullName>Job_Started_Comments__c</fullName>
    <label>Job Started Comments</label>
    <type>TextArea</type>
</CustomField>