force-app/main/default/objects/Form__c/fields/New_Job_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Job_Number__c</fullName>
    <label>Job Number</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Forms</relationshipLabel>
    <relationshipName>Forms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>