force-app/main/default/objects/Form__c/fields/Web_Merge_URL__c.field-meta.xml
<CustomField>
    <fullName>Web_Merge_URL__c</fullName>
    <label>Web Merge URL</label>
    <type>Url</type>
</CustomField>