force-app/main/default/objects/Form__c/fields/Work_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work Authorization Secured</label>
    <type>Checkbox</type>
</CustomField>