force-app/main/default/objects/Form__c/fields/Work_Authorization_Comments__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization_Comments__c</fullName>
    <label>Work Authorization Comments</label>
    <type>TextArea</type>
</CustomField>